Upgrade to USWDS 2.8; comment out theme-color-base-lightest to avoid color contrast compile error.

--- a/styles/_uswds_theme.scss
+++ b/styles/_uswds_theme.scss
@@ -23,27 +23,21 @@ $theme-font-weight-heavy: 800;
 // This corresponds to variables set in:
 // https://github.com/uswds/uswds/blob/develop/src/stylesheets/theme/_uswds-theme-color.scss
 
-$custom-dark-blue: #14223B;
-$custom-vivid-blue: #065fa9;
-$custom-blue-lighter: #eaf1fb; // replacing primary lighter
-$custom-blue-hover: #0A4577;
-$custom-gray-hover: #dcdee0;
+//$theme-color-base-lightest: #dcdee0;
+$theme-color-primary-lighter: #eaf1fb;
+$theme-color-primary-vivid: #065fa9;
+$theme-color-primary-darker: #0A4577;
+$theme-color-primary-darkest: #14223B;
 
-$site-palette: (
-    'custom-dark-blue': $custom-dark-blue,
-    'custom-vivid-blue': $custom-vivid-blue,
-    'custom-blue-lighter': $custom-blue-lighter,
-    'custom-blue-hover': $custom-blue-hover,
-    'custom-gray-hover': $custom-gray-hover,
-);
+// $site-palette: (
+//     'custom-dark-blue': $theme-color-primary-darkest,
+//     'custom-vivid-blue': $theme-color-primary-vivid,
+//     'custom-blue-lighter': $theme-color-primary-lighter,
+//     'custom-blue-hover': $theme-color-primary-darker,
+//     'custom-gray-hover': $theme-color-base-lightest,
+// );
 
-$project-color-shortcodes: $site-palette;
-
-$theme-color-base-lightest: $custom-gray-hover;
-$theme-color-primary-lighter: $custom-blue-lighter;
-$theme-color-primary-vivid: $custom-vivid-blue;
-$theme-color-primary-darker: $custom-blue-hover;
-$theme-color-primary-darkest: $custom-dark-blue;
+// $project-color-shortcodes: $site-palette;
 
 //Utilities
 // This corresponds to variables set in:
